# kolleno

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yaml  pyproject.toml
kolleno/: apps.py  models.py  serializers.py  services.py  tests.py  views.py
kolleno/migrations/: 0001_initial.py
task/: settings.py  urls.py
